--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-promise": "^2.0.3",
     "react-redux": "^5.0.7",
     "react-scripts": "1.1.4",
+    "react-sparklines": "^1.7.0",
     "redux": "^4.0.0",
     "redux-promise": "^0.6.0"
   },
